--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "typhonrt",
   "bugs": "https://github.com/typhonjs-node-bundle/plugin-node-resolve/issues",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -39,6 +41,7 @@
   },
   "repository": "typhonjs-node-bundle/plugin-node-resolve",
   "scripts": {
+    "eslint": "eslint .",
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint .",
     "prepack": "oclif-dev manifest && oclif-dev readme",
