--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "plugin-node-resolve",
+  "name": "@typhonjs-node-rollup/plugin-node-resolve",
   "description": "Provides an Oclif plugin to to configure @rollup/plugin-node-resolve & @rollup/plugin-commonjs for rollup-runner.",
   "version": "0.0.0",
   "author": "typhonrt",
-  "bugs": "https://github.com/typhonjs-node-bundle/npmbundle/issues",
+  "bugs": "https://github.com/typhonjs-node-rollup/issues/issues",
   "dependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0"
@@ -30,7 +30,7 @@
     "/oclif.manifest.json",
     "/src"
   ],
-  "homepage": "https://github.com/typhonjs-node-bundle/plugin-node-resolve",
+  "homepage": "https://github.com/typhonjs-node-rollup/plugin-node-resolve",
   "keywords": [
     "oclif-plugin"
   ],
@@ -42,7 +42,7 @@
       ]
     }
   },
-  "repository": "typhonjs-node-bundle/plugin-node-resolve",
+  "repository": "typhonjs-node-rollup/plugin-node-resolve",
   "scripts": {
     "eslint": "eslint .",
     "postpack": "rm -f oclif.manifest.json",
