--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "@typhonjs-node-rollup/plugin-node-resolve",
+  "name": "@typhonjs-oclif-rollup/plugin-node-resolve",
   "description": "Provides an Oclif plugin to to configure @rollup/plugin-node-resolve & @rollup/plugin-commonjs for rollup-runner.",
   "version": "0.0.1",
-  "author": "typhonrt",
-  "bugs": "https://github.com/typhonjs-node-rollup/issues/issues",
+  "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
+  "bugs": "https://github.com/typhonjs-oclif-rollup/issues/issues",
   "type": "module",
-  "maintainers": [
-    {
-      "name": "Michael Leahy",
-      "email": "support@typhonjs.io",
-      "url": "https://github.com/typhonrt"
-    }
+  "contributors": [
+    "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)"
   ],
   "dependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0"
   },
   "devDependencies": {
-    "@typhonjs-config/eslint-config": "^0.2.0",
-    "eslint": "^7.0.0"
+    "@typhonjs-utils/build-test": "^0.1.0"
   },
   "peerDependencies": {
     "rollup": "^2.x"
@@ -31,9 +26,10 @@
     "/npm-shrinkwrap.json",
     "/src"
   ],
-  "homepage": "https://github.com/typhonjs-node-rollup/plugin-node-resolve",
+  "homepage": "https://github.com/typhonjs-oclif-rollup/plugin-node-resolve",
   "keywords": [
     "typhonjs",
+    "oclif",
     "rollup",
     "node-resolve",
     "oclif-plugin"
@@ -46,7 +42,7 @@
       ]
     }
   },
-  "repository": "typhonjs-node-rollup/plugin-node-resolve",
+  "repository": "github:typhonjs-oclif-rollup/plugin-node-resolve",
   "scripts": {
     "eslint": "eslint .",
     "prepack": "npm run eslint"
